unpackaged/main/default/objects/NF_SIC_4__c/NF_SIC_4__c.object-meta.xml
<CustomObject>
    <label>NF SIC 4</label>
    <nameField>
        <displayFormat>NFSIC-{0000}</displayFormat>
        <label>NF SIC 4 Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF SIC 4</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>