unpackaged/main/default/objects/NF_SIC_4__c/fields/Broker_Max_Tier__c.field-meta.xml
<CustomField>
    <fullName>Broker_Max_Tier__c</fullName>
    <label>Broker Max Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>