unpackaged/main/default/objects/NF_SIC_4__c/fields/Category_Previous__c.field-meta.xml
<CustomField>
    <fullName>Category_Previous__c</fullName>
    <description>Previous SIC category prior to an update to the SIC table. The previous category is manually tracked as SIC tables are uploaded directly to salesforce</description>
    <label>Category Previous</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approvable</fullName>
            </value>
            <value>
                <fullName>Capped</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Watched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>