unpackaged/main/default/objects/NF_SIC_4__c/fields/Home_Based_Restricted_Direct__c.field-meta.xml
<CustomField>
    <fullName>Home_Based_Restricted_Direct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict if customer has a home based business for direct deal (PD-703)</description>
    <inlineHelpText>Restrict if Direct deal customer has a home based business</inlineHelpText>
    <label>Home Based Restricted (Direct)</label>
    <type>Checkbox</type>
</CustomField>