unpackaged/main/default/objects/NF_SIC_4__c/fields/Industry_Handling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Industry_Handling_Notes__c</fullName>
    <label>Industry Handling Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>