unpackaged/main/default/objects/NF_SIC_4__c/fields/Marketable__c.field-meta.xml
<CustomField>
    <fullName>Marketable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketable</label>
    <type>Checkbox</type>
</CustomField>