unpackaged/main/default/objects/NF_SIC_4__c/fields/NF_Diamond_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>NF_Diamond_Max_Amount__c</fullName>
    <label>NF Diamond Max Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>