unpackaged/main/default/objects/NF_SIC_4__c/fields/NF_Gold_Max_Term__c.field-meta.xml
<CustomField>
    <fullName>NF_Gold_Max_Term__c</fullName>
    <label>NF Gold Max Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>