unpackaged/main/default/objects/NF_SIC_4__c/fields/Quickbridge_Restricted__c.field-meta.xml
<CustomField>
    <fullName>Quickbridge_Restricted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quickbridge Restricted</label>
    <type>Checkbox</type>
</CustomField>