unpackaged/main/default/objects/NF_SIC_4__c/fields/Revenue_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Adjustment__c</fullName>
    <description>In computing an offer for an industry with this SIC, the AGS should be multiplied by the % in this field to determine the approval amount.</description>
    <label>Revenue Adjustment %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>