unpackaged/main/default/objects/NF_SIC_4__c/fields/SIC_Name_Standardized__c.field-meta.xml
<CustomField>
    <fullName>SIC_Name_Standardized__c</fullName>
    <description>BI populate this field with standardized description PD-255</description>
    <inlineHelpText>BI populate this field</inlineHelpText>
    <label>SIC Name Standardized</label>
    <length>255</length>
    <type>Text</type>
</CustomField>